--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .gradle
 build/
+out/**
+.idea/**
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -13,3 +15,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 userHome/
+
