--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     }
 
     testCompile 'gradle.plugin.net.wooga.gradle:atlas-unity:0.10.0'
+    testCompile 'gradle.plugin.net.wooga.gradle:atlas-wdk-unity:0.1.0'
 
     compile 'com.netflix.nebula:nebula-release-plugin:5.+'
     compile 'org.ajoberstar:gradle-git:1.7.+'
