--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     compile 'org.ajoberstar:gradle-git:1.7.+'
     compile 'com.github.spullara.mustache.java:compiler:0.8.18'
     compile 'cz.malohlava:visteg:1.0.+'
-    compile 'gradle.plugin.net.wooga.gradle:atlas-paket:0.10.0'
+    compile 'gradle.plugin.net.wooga.gradle:atlas-paket:0.10.+'
     compile 'gradle.plugin.net.wooga.gradle:atlas-github:0.6.0'
 
     compile gradleApi()
