Update gradle project setup
Description
===========

Update buildgradle to use net.wooga.plugins plugin. This limits down
the basic configuration for development.

Changes
=======

UPDATE build.gradle and use only one plugin net.wooga.plugins

resolves #32

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
  */
 
 plugins {
-    id 'net.wooga.plugins' version '0.1.1'
+    id 'net.wooga.plugins' version '0.3.0'
 }
 
 group 'net.wooga.gradle'
@@ -35,6 +35,10 @@ pluginBundle {
             description = 'Plugin for wooga unity library releases'
         }
     }
+}
+
+github {
+    repositoryName = "wooga/atlas-release"
 }
 
 dependencies {
