--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,8 @@ dependencies {
         exclude module: 'logback-classic'
     }
 
-    testCompile 'gradle.plugin.net.wooga.gradle:atlas-unity:0.10.0'
-    testCompile 'gradle.plugin.net.wooga.gradle:atlas-wdk-unity:0.1.0'
+    testCompile 'gradle.plugin.net.wooga.gradle:atlas-unity:1.+'
+    testCompile 'gradle.plugin.net.wooga.gradle:atlas-wdk-unity:1.+'
 
     compile 'com.netflix.nebula:nebula-release-plugin:6.+'
     compile 'org.ajoberstar:gradle-git:1.7.+'
