Fix prerelease property being incorrectly set on publish task

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 
     testImplementation 'gradle.plugin.net.wooga.gradle:atlas-unity:2.0.0-rc.3'
     testImplementation 'gradle.plugin.net.wooga.gradle:atlas-wdk-unity:2.0.0-rc.3'
+    testImplementation 'com.wooga.gradle:gradle-commons-test:(0, 1]'
 
     implementation group: 'org.kohsuke', name: 'github-api', version: '1.130'
     implementation 'org.ajoberstar.grgit:grgit-core:(4.1,5]'
