--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     testImplementation 'gradle.plugin.net.wooga.gradle:atlas-unity:2.3.0'
     testImplementation 'gradle.plugin.net.wooga.gradle:atlas-wdk-unity:2.1.1'
-    testImplementation 'com.wooga.gradle:gradle-commons-test:0.3.0'
+    testImplementation 'com.wooga.gradle:gradle-commons-test:(1,2]'
 
     implementation group: 'org.kohsuke', name: 'github-api', version: '1.135'
     implementation 'org.ajoberstar.grgit:grgit-core:(4.1,5]'
