--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,9 @@ dependencies {
     implementation group: 'org.kohsuke', name: 'github-api', version: '1.135'
     implementation 'org.ajoberstar.grgit:grgit-core:(4.1,5]'
     implementation 'org.ajoberstar.grgit:grgit-gradle:(4.1,5]'
-    implementation 'gradle.plugin.net.wooga.gradle:atlas-version:1+'
+    implementation 'com.wooga.gradle:gradle-commons:[1,2)'
+
+    implementation 'gradle.plugin.net.wooga.gradle:atlas-version:(1.2+, 2]'
     implementation 'gradle.plugin.net.wooga.gradle:atlas-paket:(2, 3]'
     implementation 'gradle.plugin.net.wooga.gradle:atlas-github:(2, 3]'
     implementation 'gradle.plugin.net.wooga.gradle:atlas-GithubReleaseNotes:(1, 2]'
