--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
  */
 
 plugins {
-    id 'net.wooga.plugins' version '4.0.0'
+    id 'net.wooga.plugins' version '5.0.0-rc.2'
     id 'net.wooga.snyk' version '0.12.0'
     id 'net.wooga.snyk-gradle-plugin' version '0.6.0'
     id "net.wooga.cve-dependency-resolution" version "0.4.0"
@@ -70,7 +70,7 @@ dependencies {
     implementation 'com.wooga.gradle:gradle-commons:[1,2['
 
     implementation 'net.wooga.gradle:version:[2,3['
-    implementation 'net.wooga.gradle:paket:[3.1,4['
+    implementation 'net.wooga.gradle:paket:[4,5['
     implementation 'net.wooga.gradle:github:[3,4['
     implementation 'net.wooga.gradle:github-release-notes:[2,3['
 }
